# rawformer

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  vit.py
src/rawformer/: __init__.py  dev.ipynb  embedding.py  encoder.py  position_encoding.py  rope.py  rope_notes.py  run.py  tests.py  tushar_rope.py  types.py  vit.ipynb  vit.py
src/rawformer/cli/: cli.py
src/rawformer/models/: __init__.py  vit.py
src/rawformer/models/reference/: encoder_vaswani.py  raw_vit.py
src/rawformer/reference/: README.md  raw_vit.py
tests/: test_embedding.py  test_position_encoding.py  test_vit.py
