[project]
name = "rawformer"
version = "0.1.1"
description = "Transformers from scratch"
readme = "README.md"

authors = [
    { name = "Nicholas Jacobs", email = "59352054+njacobs2019@users.noreply.github.com" }
]

requires-python = ">=3.12"

dependencies = [
    "beartype>=0.22.9",
    "einops>=0.8.2",
    "jaxtyping>=0.3.9",
    "torch>=2.9,<3"
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "mypy>=1.19.1",
    "nbstripout>=0.9.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.3",
    "ruff>=0.15.7",
]

[project.optional-dependencies]
cpu = ["torch>=2.9,<3"]
cuda = ["torch>=2.9,<3"]

[tool.uv]
conflicts = [[
{extra = "cpu"},
{extra = "cuda"},
],]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu",   extra = "cpu" },
  { index = "pytorch-cu", extra = "cuda" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"
module-name = "rawformer"

license="MIT"
license-files=["LICENSE"]

[project.urls]
Homepage = "https://github.com/njacobs2019/rawformer"
Issues = "https://github.com/njacobs2019/rawformer/issues"

[tool.mypy]
warn_unused_ignores = true
disable_error_code = ["import-untyped"]
python_version=3.14

[tool.ruff]
line-length = 88
indent-width = 4
respect-gitignore = true
target-version = "py314"

[tool.ruff.lint]
# Enable specific rules
select = [
    # "D", # pydocstyle
    "E",  # Pycodestyle errors
    "ERA", # eradicate (commented-out code)
    "F",  # pyflakes
    "I",   # Import checks
    "W",  # Pycodestyle warnings
    
    "A", # flake8-builtins
    "ANN", # flake8-annotations
    "ARG", # flake8-unused-arguments
    "B", # flake8-bugbear
    "BLE", # flake8-blind-except
    "C4", # flake8-comprehensions
    "COM818", # trailing-comma-on-bare-tuple
    "DTZ", # flake8-datetimez
    "EM", # flake8-errmsg
    "FIX", # flake8-fixme
    "G", # flake8-logging-format
    "ICN", # flake8-import-conventions
    "INP", # flake8-no-pep420
    "ISC", # flake8-implicit-str-concat
    "LOG", # flake8-logging
    "PIE", # flake8-pie
    "PT", # flake8-pytest-style
    "PTH", # flake8-use-pathlib
    "PYI", # flake8-pyi
    "RET", # flake8-return
    "S", # flake8-bandit
    "SIM", # flake8-simplify
    "SLF", # flake8-self
    "SLOT", # flake8-slots
    "T10", # flake8-debugger

    "C90",  # mccabe
    "FLY", # flynt
    "NPY", # numpy-specific rules
    "PD", # pandas-vet
    "PERF", # perflint (for performance)
    "RUF",
    "UP", # derived from pyupgrade
]

ignore = [
	"S101", # assert
	"F722", # forward-annotation-syntax-error (disable for jaxtyping)
	"UP037", # remove quotes from type annotation (disable for jaxtyping)
    "FIX002", # Don't treat TODO comments as an error
    "RET504", # Unnecessary assign before return statement
]
